--- a/x11-misc/alock/ChangeLog
+++ b/x11-misc/alock/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-misc/alock
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-misc/cvs-repo/gentoo-x86/x11-misc/alock/ChangeLog,v 1.2 2007/02/09 00:10:28 swegener Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-misc/cvs-repo/gentoo-x86/x11-misc/alock/ChangeLog,v 1.3 2007/04/24 16:45:39 ticho Exp $
+
+  24 Apr 2007; Andrej Kacian <ticho@gentoo.org> alock-60.ebuild:
+  Added ~x86, bug #175797 by Robert R. Russell <zoohoo_linux at allegiance.tv>
 
 *alock-60 (05 Jan 2007)
 
