--- a/net-nntp/inn/ChangeLog
+++ b/net-nntp/inn/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-nntp/inn
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-nntp/cvs-repo/gentoo-x86/net-nntp/inn/ChangeLog,v 1.11 2007/04/22 15:49:53 jokey Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-nntp/cvs-repo/gentoo-x86/net-nntp/inn/ChangeLog,v 1.12 2007/04/24 18:49:36 dertobi123 Exp $
+
+  24 Apr 2007; Tobias Scherbaum <dertobi123@gentoo.org> inn-2.4.3.ebuild:
+  ppc stable, bug #173655
 
   22 Apr 2007; Markus Ullmann <jokey@gentoo.org> inn-2.4.3.ebuild:
   Stable on x86 wrt bug #173655
