--- a/dev-lang/spidermonkey/ChangeLog
+++ b/dev-lang/spidermonkey/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-lang/spidermonkey
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-lang/cvs-repo/gentoo-x86/dev-lang/spidermonkey/ChangeLog,v 1.29 2007/04/23 19:09:58 armin76 Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-lang/cvs-repo/gentoo-x86/dev-lang/spidermonkey/ChangeLog,v 1.30 2007/04/24 19:05:48 gustavoz Exp $
+
+  24 Apr 2007; Gustavo Zacarias <gustavoz@gentoo.org>
+  spidermonkey-1.5-r2.ebuild:
+  Stable on sparc
 
   23 Apr 2007; Raúl Porcel <armin76@gentoo.org> spidermonkey-1.5-r2.ebuild:
   x86 stable
