--- a/media-libs/libmikmod/ChangeLog
+++ b/media-libs/libmikmod/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-libs/libmikmod
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/libmikmod/ChangeLog,v 1.46 2007/03/25 12:51:44 drac Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/libmikmod/ChangeLog,v 1.47 2007/04/24 19:30:13 gustavoz Exp $
+
+  24 Apr 2007; Gustavo Zacarias <gustavoz@gentoo.org>
+  libmikmod-3.1.11-r4.ebuild:
+  Stable on sparc
 
 *libmikmod-3.1.11-r4 (25 Mar 2007)
 
