--- a/dev-util/bsdiff/ChangeLog
+++ b/dev-util/bsdiff/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-util/bsdiff
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-util/cvs-repo/gentoo-x86/dev-util/bsdiff/ChangeLog,v 1.25 2007/04/24 10:55:30 eroyf Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-util/cvs-repo/gentoo-x86/dev-util/bsdiff/ChangeLog,v 1.26 2007/04/24 19:35:49 gustavoz Exp $
+
+  24 Apr 2007; Gustavo Zacarias <gustavoz@gentoo.org> bsdiff-4.3-r1.ebuild:
+  Stable on sparc
 
   24 Apr 2007; Alexander Færøy <eroyf@gentoo.org> bsdiff-4.3-r1.ebuild:
   Stable on MIPS.
