--- a/x11-terms/mlterm/ChangeLog
+++ b/x11-terms/mlterm/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-terms/mlterm
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-terms/cvs-repo/gentoo-x86/x11-terms/mlterm/ChangeLog,v 1.56 2007/04/24 18:53:00 gustavoz Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-terms/cvs-repo/gentoo-x86/x11-terms/mlterm/ChangeLog,v 1.57 2007/04/24 19:43:34 welp Exp $
+
+  24 Apr 2007; Peter Weller <welp@gentoo.org> mlterm-2.9.3-r1.ebuild:
+  Stable on amd64 wrt bug 175813
 
   24 Apr 2007; Gustavo Zacarias <gustavoz@gentoo.org>
   mlterm-2.9.3-r1.ebuild:
