--- a/media-video/vlc/ChangeLog
+++ b/media-video/vlc/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-video/vlc
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-video/cvs-repo/gentoo-x86/media-video/vlc/ChangeLog,v 1.240 2007/04/24 16:59:20 aballier Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-video/cvs-repo/gentoo-x86/media-video/vlc/ChangeLog,v 1.241 2007/04/24 20:37:52 aballier Exp $
+
+  24 Apr 2007; Alexis Ballier <aballier@gentoo.org> vlc-0.8.6b.ebuild:
+  Add support for IIDC cameras with dc1394 useflag, thanks to Christopher
+  Hogan, bug #167633
 
   24 Apr 2007; Alexis Ballier <aballier@gentoo.org>
   -vlc-0.8.6b_beta1.ebuild:
