--- a/media-tv/linuxtv-dvb-firmware/ChangeLog
+++ b/media-tv/linuxtv-dvb-firmware/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-tv/linuxtv-dvb-firmware
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-tv/cvs-repo/gentoo-x86/media-tv/linuxtv-dvb-firmware/ChangeLog,v 1.14 2007/04/02 19:07:12 zzam Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-tv/cvs-repo/gentoo-x86/media-tv/linuxtv-dvb-firmware/ChangeLog,v 1.15 2007/04/25 00:29:23 beandog Exp $
+
+  25 Apr 2007; Steve Dibb <beandog@gentoo.org>
+  linuxtv-dvb-firmware-1.ebuild, linuxtv-dvb-firmware-2006.11.13.ebuild:
+  amd64 stable
 
   02 Apr 2007; Matthias Schwarzott <zzam@gentoo.org> metadata.xml:
   Assigned to vdr-project.
