--- a/gnome-extra/gnome-utils/ChangeLog
+++ b/gnome-extra/gnome-utils/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for gnome-extra/gnome-utils
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/gnome-extra/cvs-repo/gentoo-x86/gnome-extra/gnome-utils/ChangeLog,v 1.144 2007/03/27 21:45:47 dang Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/gnome-extra/cvs-repo/gentoo-x86/gnome-extra/gnome-utils/ChangeLog,v 1.145 2007/04/25 01:40:25 dang Exp $
+
+*gnome-utils-2.18.1 (25 Apr 2007)
+
+  25 Apr 2007; Daniel Gryniewicz <dang@gentoo.org>
+  +gnome-utils-2.18.1.ebuild:
+  Bump to 2.18.1
 
 *gnome-utils-2.18.0 (27 Mar 2007)
 
