--- a/x11-drivers/xf86-input-mouse/ChangeLog
+++ b/x11-drivers/xf86-input-mouse/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for x11-drivers/xf86-input-mouse
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-drivers/cvs-repo/gentoo-x86/x11-drivers/xf86-input-mouse/ChangeLog,v 1.37 2007/01/24 06:50:48 dberkholz Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-drivers/cvs-repo/gentoo-x86/x11-drivers/xf86-input-mouse/ChangeLog,v 1.38 2007/04/25 13:14:07 corsair Exp $
+
+  25 Apr 2007; Markus Rothe <corsair@gentoo.org>
+  xf86-input-mouse-1.2.1.ebuild:
+  Stable on ppc64; bug #175465
 
   24 Jan 2007; Donnie Berkholz <dberkholz@gentoo.org>;
   -xf86-input-mouse-1.0.4.ebuild:
