--- a/x11-misc/util-macros/ChangeLog
+++ b/x11-misc/util-macros/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-misc/util-macros
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-misc/cvs-repo/gentoo-x86/x11-misc/util-macros/ChangeLog,v 1.48 2007/04/25 10:52:45 corsair Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-misc/cvs-repo/gentoo-x86/x11-misc/util-macros/ChangeLog,v 1.49 2007/04/25 16:42:35 armin76 Exp $
+
+  25 Apr 2007; Raúl Porcel <armin76@gentoo.org> util-macros-1.1.5.ebuild:
+  Stable on ia64 wrt bug #175465.
 
   25 Apr 2007; Markus Rothe <corsair@gentoo.org> util-macros-1.1.5.ebuild:
   Stable on ppc64; bug #175465
