--- a/kde-base/kdepim/ChangeLog
+++ b/kde-base/kdepim/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for kde-base/kdepim
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kdepim/Attic/ChangeLog,v 1.261 2007/04/25 08:56:55 carlo Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kdepim/Attic/ChangeLog,v 1.262 2007/04/25 19:32:42 jer Exp $
+
+  25 Apr 2007; Jeroen Roovers <jer@gentoo.org> kdepim-3.5.5-r4.ebuild:
+  Stable for HPPA (bug #174678).
 
 *kdepim-3.5.5-r4 (25 Apr 2007)
 
