--- a/dev-java/commons-launcher/ChangeLog
+++ b/dev-java/commons-launcher/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-java/commons-launcher
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-java/cvs-repo/gentoo-x86/dev-java/commons-launcher/ChangeLog,v 1.21 2007/04/25 19:33:41 betelgeuse Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-java/cvs-repo/gentoo-x86/dev-java/commons-launcher/ChangeLog,v 1.22 2007/04/25 19:37:00 betelgeuse Exp $
+
+  25 Apr 2007; Petteri Räty <betelgeuse@gentoo.org>
+  -commons-launcher-0.9.ebuild:
+  Remove generation 1 ebuild.
 
   25 Apr 2007; Petteri Räty <betelgeuse@gentoo.org>
   commons-launcher-1.1.ebuild:
