--- a/app-laptop/tp_smapi/ChangeLog
+++ b/app-laptop/tp_smapi/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for app-laptop/tp_smapi
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-laptop/cvs-repo/gentoo-x86/app-laptop/tp_smapi/ChangeLog,v 1.19 2007/04/20 13:18:01 chainsaw Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-laptop/cvs-repo/gentoo-x86/app-laptop/tp_smapi/ChangeLog,v 1.20 2007/04/26 02:41:26 compnerd Exp $
+
+  26 Apr 2007; Saleem Abdulrasool <compnerd@gentoo.org>
+  tp_smapi-0.31.ebuild:
+  keyword ~amd64
 
 *tp_smapi-0.31 (20 Apr 2007)
 
