--- a/dev-java/adaptx/ChangeLog
+++ b/dev-java/adaptx/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-java/adaptx
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-java/cvs-repo/gentoo-x86/dev-java/adaptx/Attic/ChangeLog,v 1.24 2007/04/26 11:55:32 opfer Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-java/cvs-repo/gentoo-x86/dev-java/adaptx/Attic/ChangeLog,v 1.25 2007/04/26 12:17:45 caster Exp $
+
+  26 Apr 2007; Vlastimil Babka <caster@gentoo.org>
+  adaptx-0.9.13_p20041105-r2.ebuild:
+  Filter jikes.
 
   26 Apr 2007; Christian Faulhammer <opfer@gentoo.org>
   adaptx-0.9.13_p20041105-r2.ebuild:
