--- a/app-emulation/vice/ChangeLog
+++ b/app-emulation/vice/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for app-emulation/vice
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-emulation/cvs-repo/gentoo-x86/app-emulation/vice/ChangeLog,v 1.45 2007/04/24 13:14:19 gustavoz Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-emulation/cvs-repo/gentoo-x86/app-emulation/vice/ChangeLog,v 1.46 2007/04/26 18:06:14 nyhm Exp $
+
+*vice-1.21 (26 Apr 2007)
+
+  26 Apr 2007; Tristan Heaven <nyhm@gentoo.org>
+  +files/vice-1.21-uicolor.patch, +vice-1.21.ebuild:
+  Version bump
 
   24 Apr 2007; Gustavo Zacarias <gustavoz@gentoo.org> vice-1.20.ebuild:
   Stable on sparc
