--- a/net-firewall/psad/ChangeLog
+++ b/net-firewall/psad/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-firewall/psad
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-firewall/cvs-repo/gentoo-x86/net-firewall/psad/ChangeLog,v 1.40 2007/04/26 23:46:53 battousai Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-firewall/cvs-repo/gentoo-x86/net-firewall/psad/ChangeLog,v 1.41 2007/04/26 23:50:55 battousai Exp $
+
+  26 Apr 2007; Bryan Stine <battousai@gentoo.org> psad-2.0.6.ebuild:
+  Forgot to re-KEYWORD.
 
 *psad-2.0.6 (26 Apr 2007)
 
