--- a/dev-java/commons-jxpath/ChangeLog
+++ b/dev-java/commons-jxpath/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for dev-java/commons-jxpath
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-java/cvs-repo/gentoo-x86/dev-java/commons-jxpath/ChangeLog,v 1.17 2007/04/26 12:15:36 opfer Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-java/cvs-repo/gentoo-x86/dev-java/commons-jxpath/ChangeLog,v 1.18 2007/04/27 03:46:34 wltjr Exp $
+
+  27 Apr 2007; William L. Thomson Jr. <wltjr@gentoo.org>
+  -commons-jxpath-1.1-r1.ebuild, -commons-jxpath-1.1-r2.ebuild,
+  commons-jxpath-1.2-r2.ebuild:
+  Stable on amd64, bug #175997. Removed older version in same slot.
 
   26 Apr 2007; Christian Faulhammer <opfer@gentoo.org>
   commons-jxpath-1.2-r2.ebuild:
