--- a/media-plugins/mythmusic/ChangeLog
+++ b/media-plugins/mythmusic/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for media-plugins/mythmusic
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-plugins/cvs-repo/gentoo-x86/media-plugins/mythmusic/Attic/ChangeLog,v 1.52 2007/04/20 00:05:20 cardoe Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-plugins/cvs-repo/gentoo-x86/media-plugins/mythmusic/Attic/ChangeLog,v 1.53 2007/04/27 06:29:03 cardoe Exp $
+
+*mythmusic-0.20.1 (27 Apr 2007)
+
+  27 Apr 2007; Doug Goldstein <cardoe@gentoo.org> +mythmusic-0.20.1.ebuild:
+  bump to 0.20.1 release
 
 *mythmusic-0.20_p13239 (20 Apr 2007)
 
