--- a/net-misc/kvpnc/ChangeLog
+++ b/net-misc/kvpnc/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for net-misc/kvpnc
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-misc/cvs-repo/gentoo-x86/net-misc/kvpnc/ChangeLog,v 1.28 2007/04/24 19:56:32 voxus Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-misc/cvs-repo/gentoo-x86/net-misc/kvpnc/ChangeLog,v 1.29 2007/04/27 11:35:03 voxus Exp $
+
+*kvpnc-0.8.8-r2 (27 Apr 2007)
+
+  27 Apr 2007; Konstantin V. Arkhipov <voxus@gentoo.org>
+  -kvpnc-0.8.8-r1.ebuild, +kvpnc-0.8.8-r2.ebuild:
+  Closing bug #175895.
 
   24 Apr 2007; Konstantin V. Arkhipov <voxus@gentoo.org>
   kvpnc-0.8.8-r1.ebuild:
