--- a/virtual/c++-tr1-type-traits/ChangeLog
+++ b/virtual/c++-tr1-type-traits/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for virtual/c++-tr1-type-traits
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/virtual/cvs-repo/gentoo-x86/virtual/c++-tr1-type-traits/ChangeLog,v 1.2 2007/04/04 21:11:46 swegener Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/virtual/cvs-repo/gentoo-x86/virtual/c++-tr1-type-traits/ChangeLog,v 1.3 2007/04/28 12:51:48 swegener Exp $
+
+  28 Apr 2007; Sven Wegener <swegener@gentoo.org>
+  c++-tr1-type-traits-0.ebuild:
+  Virtuals have only run-time dependencies.
 
 *c++-tr1-type-traits-0 (29 Mar 2007)
 
