--- a/x11-misc/Xorgautoconfig/ChangeLog
+++ b/x11-misc/Xorgautoconfig/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for x11-misc/Xorgautoconfig
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-misc/cvs-repo/gentoo-x86/x11-misc/Xorgautoconfig/ChangeLog,v 1.20 2007/02/13 01:02:44 josejx Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-misc/cvs-repo/gentoo-x86/x11-misc/Xorgautoconfig/ChangeLog,v 1.21 2007/04/28 12:54:14 tove Exp $
+
+  28 Apr 2007; Torsten Veller <tove@gentoo.org>
+  Xorgautoconfig-0.2.4-r1.ebuild:
+  Use newinitd
 
   13 Feb 2007; Joseph Jezak <josejx@gentoo.org>
   +files/Xorgautoconfig-lz.patch, -Xorgautoconfig-0.2.3.ebuild,
