--- a/kde-misc/kooldock/ChangeLog
+++ b/kde-misc/kooldock/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for kde-misc/kooldock
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/kde-misc/cvs-repo/gentoo-x86/kde-misc/kooldock/Attic/ChangeLog,v 1.18 2007/03/31 17:58:02 carlo Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/kde-misc/cvs-repo/gentoo-x86/kde-misc/kooldock/Attic/ChangeLog,v 1.19 2007/04/28 16:09:53 nixnut Exp $
+
+  28 Apr 2007; nixnut <nixnut@gentoo.org> kooldock-0.4.6.ebuild:
+  Stable on ppc wrt bug 176286
 
 *kooldock-0.4.6 (31 Mar 2007)
 
