--- a/media-sound/kamix/ChangeLog
+++ b/media-sound/kamix/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-sound/kamix
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-sound/cvs-repo/gentoo-x86/media-sound/kamix/Attic/ChangeLog,v 1.32 2007/04/27 04:00:22 josejx Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-sound/cvs-repo/gentoo-x86/media-sound/kamix/Attic/ChangeLog,v 1.33 2007/04/28 17:47:52 corsair Exp $
+
+  28 Apr 2007; Markus Rothe <corsair@gentoo.org> kamix-0.6.6.ebuild:
+  Stable on ppc64; bug #161724
 
   27 Apr 2007; Joseph Jezak <josejx@gentoo.org> kamix-0.6.6.ebuild:
   Marked ppc stable for bug #161724.
