--- a/media-sound/jack/ChangeLog
+++ b/media-sound/jack/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-sound/jack
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-sound/cvs-repo/gentoo-x86/media-sound/jack/ChangeLog,v 1.16 2007/04/28 16:12:47 armin76 Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-sound/cvs-repo/gentoo-x86/media-sound/jack/ChangeLog,v 1.17 2007/04/28 18:02:45 corsair Exp $
+
+  28 Apr 2007; Markus Rothe <corsair@gentoo.org> jack-3.1.1.ebuild:
+  Stable on ppc64; bug #172952
 
   28 Apr 2007; Raúl Porcel <armin76@gentoo.org> jack-3.1.1.ebuild:
   x86 stable wrt #172952
