--- a/net-analyzer/nessus-core/ChangeLog
+++ b/net-analyzer/nessus-core/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for net-analyzer/nessus-core
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-analyzer/cvs-repo/gentoo-x86/net-analyzer/nessus-core/ChangeLog,v 1.111 2007/04/11 13:42:29 welp Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-analyzer/cvs-repo/gentoo-x86/net-analyzer/nessus-core/ChangeLog,v 1.112 2007/04/28 18:57:39 tove Exp $
+
+  28 Apr 2007; Torsten Veller <tove@gentoo.org> nessus-core-2.2.6.ebuild,
+  nessus-core-2.2.9.ebuild:
+  Fix *initd, *confd and *envd calls (#173884, #174266)
 
   11 Apr 2007; Peter Weller <welp@gentoo.org> nessus-core-2.2.9.ebuild:
   Keyworded ~x86-fbsd wrt bug 172890
