--- a/dev-java/jsx/ChangeLog
+++ b/dev-java/jsx/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for dev-java/jsx
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-java/cvs-repo/gentoo-x86/dev-java/jsx/Attic/ChangeLog,v 1.8 2007/02/09 07:23:19 flameeyes Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-java/cvs-repo/gentoo-x86/dev-java/jsx/Attic/ChangeLog,v 1.9 2007/04/28 19:56:41 nelchael Exp $
+
+*jsx-1.0.7.5-r1 (28 Apr 2007)
+
+  28 Apr 2007; Krzysiek Pawlik <nelchael@gentoo.org> +jsx-1.0.7.5-r1.ebuild:
+  Migrated to generation 2.
 
   09 Feb 2007; Diego Pettenò <flameeyes@gentoo.org> ChangeLog:
   Regenerate digest in Manifest2 format.
