--- a/dev-java/jldap/ChangeLog
+++ b/dev-java/jldap/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-java/jldap
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-java/cvs-repo/gentoo-x86/dev-java/jldap/ChangeLog,v 1.8 2007/02/21 23:36:18 peper Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-java/cvs-repo/gentoo-x86/dev-java/jldap/ChangeLog,v 1.9 2007/04/28 20:19:05 betelgeuse Exp $
+
+  28 Apr 2007; Petteri Räty <betelgeuse@gentoo.org> jldap-20060300.ebuild:
+  Fix REDEND typo to RDEPEND in DEPEND.
 
   21 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> ChangeLog:
   Transition to Manifest2.
