--- a/x11-wm/ion3/ChangeLog
+++ b/x11-wm/ion3/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for x11-wm/ion3
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-wm/cvs-repo/gentoo-x86/x11-wm/ion3/Attic/ChangeLog,v 1.47 2007/03/26 16:11:50 armin76 Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-wm/cvs-repo/gentoo-x86/x11-wm/ion3/Attic/ChangeLog,v 1.48 2007/04/28 21:52:22 mabi Exp $
+
+*ion3-20070318-r1 (28 Apr 2007)
+
+  28 Apr 2007; Matti Bickel <mabi@gentoo.org> -ion3-20060317.ebuild,
+  -ion3-20070203.ebuild, +ion3-20070318-r1.ebuild:
+  filtering --as-needed now, cleanup
 
   26 Mar 2007; Raúl Porcel <armin76@gentoo.org> ion3-20061223.ebuild,
   ion3-20070203.ebuild, ion3-20070318.ebuild:
