--- a/x11-apps/mesa-progs/ChangeLog
+++ b/x11-apps/mesa-progs/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-apps/mesa-progs
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-apps/cvs-repo/gentoo-x86/x11-apps/mesa-progs/ChangeLog,v 1.34 2007/04/25 17:05:48 armin76 Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-apps/cvs-repo/gentoo-x86/x11-apps/mesa-progs/ChangeLog,v 1.35 2007/04/29 06:01:38 ticho Exp $
+
+  29 Apr 2007; Andrej Kacian <ticho@gentoo.org> mesa-progs-6.5.2.ebuild:
+  Stable on x86, bug #175465.
 
   25 Apr 2007; Raúl Porcel <armin76@gentoo.org> mesa-progs-6.5.2.ebuild:
   Stable on ia64 wrt bug #175465.
