--- a/x11-drivers/xf86-video-tdfx/ChangeLog
+++ b/x11-drivers/xf86-video-tdfx/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for x11-drivers/xf86-video-tdfx
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-drivers/cvs-repo/gentoo-x86/x11-drivers/xf86-video-tdfx/ChangeLog,v 1.31 2007/04/25 18:11:39 armin76 Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-drivers/cvs-repo/gentoo-x86/x11-drivers/xf86-video-tdfx/ChangeLog,v 1.32 2007/04/29 06:25:58 ticho Exp $
+
+  29 Apr 2007; Andrej Kacian <ticho@gentoo.org>
+  xf86-video-tdfx-1.3.0.ebuild:
+  Stable on x86, bug #175465.
 
   25 Apr 2007; Raúl Porcel <armin76@gentoo.org>
   xf86-video-tdfx-1.3.0.ebuild:
