--- a/kde-base/kdenetwork/ChangeLog
+++ b/kde-base/kdenetwork/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for kde-base/kdenetwork
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kdenetwork/Attic/ChangeLog,v 1.255 2007/04/21 23:03:46 philantrop Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kdenetwork/Attic/ChangeLog,v 1.256 2007/04/29 17:16:08 carlo Exp $
+
+  29 Apr 2007; Carsten Lohrke <carlo@gentoo.org> kdenetwork-3.5.6.ebuild:
+  Remove virtual/x11 dependency.
 
   21 Apr 2007; Wulf C. Krueger <philantrop@gentoo.org>
   kdenetwork-3.5.5-r1.ebuild, kdenetwork-3.5.5-r2.ebuild,
