--- a/sys-libs/ncurses/ChangeLog
+++ b/sys-libs/ncurses/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for sys-libs/ncurses
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sys-libs/cvs-repo/gentoo-x86/sys-libs/ncurses/ChangeLog,v 1.139 2007/04/22 08:44:35 kloeri Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sys-libs/cvs-repo/gentoo-x86/sys-libs/ncurses/ChangeLog,v 1.140 2007/04/30 08:59:14 grobian Exp $
+
+  30 Apr 2007; Fabian Groffen <grobian@gentoo.org> ncurses-5.5-r3.ebuild,
+  ncurses-5.6.ebuild, ncurses-5.6-r1.ebuild:
+  Removed weird darwin hacks
 
   22 Apr 2007; Bryan Østergaard <kloeri@gentoo.org> ncurses-5.6.ebuild:
   Stable on Mips, bug 173728.
