--- a/media-plugins/vdr-epgsearch/ChangeLog
+++ b/media-plugins/vdr-epgsearch/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for media-plugins/vdr-epgsearch
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-plugins/cvs-repo/gentoo-x86/media-plugins/vdr-epgsearch/ChangeLog,v 1.20 2007/03/13 12:42:30 zzam Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-plugins/cvs-repo/gentoo-x86/media-plugins/vdr-epgsearch/ChangeLog,v 1.21 2007/04/30 11:54:50 zzam Exp $
+
+*vdr-epgsearch-0.9.21 (30 Apr 2007)
+
+  30 Apr 2007; Matthias Schwarzott <zzam@gentoo.org>
+  +vdr-epgsearch-0.9.21.ebuild:
+  Version bumped.
 
   13 Mar 2007; Matthias Schwarzott <zzam@gentoo.org>
   vdr-epgsearch-0.9.20.ebuild:
