--- a/dev-lang/cm3-bin/ChangeLog
+++ b/dev-lang/cm3-bin/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-lang/cm3-bin
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-lang/cvs-repo/gentoo-x86/dev-lang/cm3-bin/Attic/ChangeLog,v 1.7 2007/01/24 04:47:52 vapier Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-lang/cvs-repo/gentoo-x86/dev-lang/cm3-bin/Attic/ChangeLog,v 1.8 2007/04/30 13:23:14 armin76 Exp $
+
+  30 Apr 2007; Raúl Porcel <armin76@gentoo.org> cm3-bin-5.4.0.ebuild:
+  x86 stable wrt #176400
 
 *cm3-bin-5.4.0 (24 Jan 2007)
 
