--- a/net-im/amsn/ChangeLog
+++ b/net-im/amsn/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-im/amsn
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-im/cvs-repo/gentoo-x86/net-im/amsn/ChangeLog,v 1.69 2007/04/24 17:32:25 dertobi123 Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-im/cvs-repo/gentoo-x86/net-im/amsn/ChangeLog,v 1.70 2007/04/30 14:06:44 yoswink Exp $
+
+  30 Apr 2007; Jose Luis Rivero <yoswink@gentoo.org> amsn-0.96-r1.ebuild:
+  Alpha stable wrt security bug #175563
 
   24 Apr 2007; Tobias Scherbaum <dertobi123@gentoo.org> amsn-0.96-r1.ebuild:
   ppc stable, bug #175563
