--- a/app-editors/nano/ChangeLog
+++ b/app-editors/nano/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for app-editors/nano
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-editors/cvs-repo/gentoo-x86/app-editors/nano/ChangeLog,v 1.159 2007/04/06 21:18:50 vapier Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-editors/cvs-repo/gentoo-x86/app-editors/nano/ChangeLog,v 1.160 2007/04/30 16:40:31 vapier Exp $
+
+*nano-2.0.6 (30 Apr 2007)
+
+  30 Apr 2007; Mike Frysinger <vapier@gentoo.org> +nano-2.0.6.ebuild:
+  Version bump.
 
 *nano-2.0.4 (06 Apr 2007)
 
