--- a/kde-base/kdebase-startkde/ChangeLog
+++ b/kde-base/kdebase-startkde/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for kde-base/kdebase-startkde
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kdebase-startkde/ChangeLog,v 1.84 2007/02/05 12:23:11 flameeyes Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kdebase-startkde/ChangeLog,v 1.85 2007/04/30 19:58:15 carlo Exp $
+
+*kdebase-startkde-3.5.6-r2 (30 Apr 2007)
+
+  30 Apr 2007; Carsten Lohrke <carlo@gentoo.org>
+  +kdebase-startkde-3.5.6-r2.ebuild:
+  Remove virtual/x11 dependency, use new patch set.
 
   05 Feb 2007; Diego Pettenò <flameeyes@gentoo.org>
   -files/kdebase-startkde-3.4.1-gentoo.patch,
