--- a/dev-util/deskzilla/ChangeLog
+++ b/dev-util/deskzilla/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-util/deskzilla
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-util/cvs-repo/gentoo-x86/dev-util/deskzilla/ChangeLog,v 1.1 2007/04/24 22:09:31 caster Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-util/cvs-repo/gentoo-x86/dev-util/deskzilla/ChangeLog,v 1.2 2007/04/30 20:39:41 genone Exp $
+
+  30 Apr 2007; Marius Mauch <genone@gentoo.org> deskzilla-1.3.ebuild:
+  Replacing einfo with elog
 
 *deskzilla-1.3 (24 Apr 2007)
 
