--- a/media-sound/jmax/ChangeLog
+++ b/media-sound/jmax/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-sound/jmax
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-sound/cvs-repo/gentoo-x86/media-sound/jmax/Attic/ChangeLog,v 1.15 2007/03/04 22:29:32 dirtyepic Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-sound/cvs-repo/gentoo-x86/media-sound/jmax/Attic/ChangeLog,v 1.16 2007/05/01 00:06:31 genone Exp $
+
+  01 May 2007; Marius Mauch <genone@gentoo.org> jmax-4.1.0.ebuild:
+  Replacing einfo with elog
 
   04 Mar 2007; Ryan Hill <dirtyepic@gentoo.org>
   +files/jmax-4.1.0-gcc41.patch, +files/jmax-4.1.0-usercflags.patch,
