--- a/media-sound/supercollider/ChangeLog
+++ b/media-sound/supercollider/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-sound/supercollider
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-sound/cvs-repo/gentoo-x86/media-sound/supercollider/Attic/ChangeLog,v 1.7 2007/02/03 20:32:43 flameeyes Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-sound/cvs-repo/gentoo-x86/media-sound/supercollider/Attic/ChangeLog,v 1.8 2007/05/01 00:26:46 genone Exp $
+
+  01 May 2007; Marius Mauch <genone@gentoo.org>
+  supercollider-20040903.ebuild:
+  Replacing einfo with elog
 
   03 Feb 2007; Diego Pettenò <flameeyes@gentoo.org> ChangeLog:
   Regenerate digest in Manifest2 format.
